<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="angelaburova.com.walkinvr.ActivitySettings"
    android:background="@drawable/backgroundsettings">


    <TextView
        android:id="@+id/sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="8dp"
        android:text="@string/sound"
        android:textColor="?android:attr/textColorSecondaryNoDisable"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.219" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:ellipsize="middle"
        android:onClick="switchMusicClick"
        android:theme="@style/MySwitch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        app:layout_constraintLeft_toRightOf="@+id/music"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.55" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switchCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        android:onClick="switchSoundClick"
        android:ellipsize="middle"
        android:theme="@style/MySwitch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintLeft_toRightOf="@+id/sound"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="8dp"
        android:text="@string/music"
        android:textColor="?android:attr/textColorSecondaryNoDisable"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sound"
        app:layout_constraintVertical_bias="0.099" />

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lang"
        android:textColor="?android:attr/textColorSecondaryNoDisable"
        android:textSize="28sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/music"
        android:layout_marginLeft="95dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/header"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <ToggleButton
        android:id="@+id/lang"
        android:layout_width="58dp"
        android:layout_height="41dp"
        android:alpha="0.5"
        android:onClick="langButtonOnClick"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/background_dark"
        android:textColorLink="?attr/colorControlActivated"
        android:textOff="EN"
        android:textOn="RU"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/switch1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.115"
        android:layout_marginRight="56dp"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="157dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.5"
        android:background="@drawable/rounded_button2"
        android:text="@string/menu"
        android:textSize="36sp"
        android:onClick="menuButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.984"
        app:layout_constraintHorizontal_bias="0.504"
        tools:layout_editor_absoluteY="524dp" />

</android.support.constraint.ConstraintLayout>
